--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -463,3 +463,8 @@ titles:
    tooltip: 1861（安政4）年～大正時代
    start: 1861
    end: 1925
+
+ - title: とと姉ちゃん
+   tooltip: 1930（昭和5）年～昭和時代
+   start: 1930
+   end: 1989
