『とと姉ちゃん』のデータ確定

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -465,6 +465,6 @@ titles:
    end: 1925
 
  - title: とと姉ちゃん
-   tooltip: 1930（昭和5）年～昭和時代
+   tooltip: 1930（昭和5）年～1974（昭和49）年
    start: 1930
-   end: 1989
+   end: 1974
