『べっぴんさん』の開始年変更

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -470,6 +470,6 @@ titles:
    end: 1988
 
  - title: べっぴんさん
-   tooltip: 昭和時代
-   start: 1926
+   tooltip: 1934（昭和9）年～昭和時代
+   start: 1934
    end: 1989
