タイトルに誤りがあったので修正

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -484,7 +484,7 @@ titles:
    start: 1890
    end: 1946
 
- - title: 半分、青い
+ - title: 半分、青い。
    tooltip: 1971（昭和46）年～現代
    start: 1971
    end: 2018
