『べっぴんさん』の時代設定確定

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -470,9 +470,9 @@ titles:
    end: 1988
 
  - title: べっぴんさん
-   tooltip: 1934（昭和9）年～昭和時代
+   tooltip: 1934（昭和9）年～1984（昭和59）年
    start: 1934
-   end: 1989
+   end: 1984
 
  - title: ひよっこ
    tooltip: 1964（昭和39）年～現代
