--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -475,13 +475,13 @@ titles:
    end: 1984
 
  - title: ひよっこ
-   tooltip: 1964（昭和39）年～現代
+   tooltip: 1964（昭和39）年～1968（昭和43）年
    start: 1964
-   end: 2017
+   end: 1968
 
  - title: わろてんか
-   tooltip: 明治時代後半～第二次大戦直後
-   start: 1890
+   tooltip: 1902（明治35）年～第二次大戦直後
+   start: 1902
    end: 1946
 
  - title: 半分、青い。
