『わろてんか』の終了年を更新

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -480,7 +480,7 @@ titles:
    end: 1968
 
  - title: わろてんか
-   tooltip: 1902（明治35）年～第二次大戦直後
+   tooltip: 1902（明治35）年～1946（昭和21）年
    start: 1902
    end: 1946
 
