『まんぷく』の時代設定確定

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -490,7 +490,7 @@ titles:
    end: 2011
 
  - title: まんぷく
-   tooltip: 1938（昭和13）年～戦後
+   tooltip: 1938（昭和13）年～1970（昭和45）年
    start: 1938
    end: 1989
 
