--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -500,9 +500,9 @@ titles:
    end: 1975
 
  - title: スカーレット
-   tooltip: 1947（昭和22）年～戦後
+   tooltip: 1947（昭和22）年～1986（昭和61）年
    start: 1947
-   end: 1989
+   end: 1986
 
  - title: エール
    tooltip: 1909（明治42）年～戦後
