--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -513,3 +513,8 @@ titles:
    tooltip: 大正時代～戦後
    start: 1912
    end: 2021
+
+ - title: おかえりモネ
+   tooltip: 1995（平成7）～現代
+   start: 1995
+   end: 2021
