--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -510,8 +510,8 @@ titles:
    end: 1977
 
  - title: おちょやん
-   tooltip: 大正時代～戦後
-   start: 1912
+   tooltip: 1916（大正5）年～戦後
+   start: 1916
    end: 2021
 
  - title: おかえりモネ
