『おかえりモネ』の終了年を更新

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -515,9 +515,9 @@ titles:
    end: 1952
 
  - title: おかえりモネ
-   tooltip: 1995（平成7）～現代
+   tooltip: 1995（平成7）～2022年
    start: 1995
-   end: 2021
+   end: 2022
 
  - title: カムカムエヴリバディ
    tooltip: 1926（昭和元）～現代
