『舞いあがれ！』のデータを暫定的に追加

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -528,3 +528,8 @@ titles:
    tooltip: 1960（昭和35）～現代
    start: 1960
    end: 2021
+
+ - title: 舞いあがれ！
+   tooltip: 1990（平成2）～現代
+   start: 1990
+   end: 2021
