『らんまん』のデータを暫定的に追加

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -533,3 +533,8 @@ titles:
    tooltip: 1990（平成2）～現代
    start: 1990
    end: 2021
+
+ - title: らんまん
+   tooltip: 1862（文久2）～1957（昭和32）年
+   start: 1862
+   end: 1957
