『カムカムエヴリバディ』の終了年を更新

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -515,12 +515,12 @@ titles:
    end: 1952
 
  - title: おかえりモネ
-   tooltip: 1995（平成7）～2022年
+   tooltip: 1995（平成7）～2022（令和4）年
    start: 1995
    end: 2022
 
  - title: カムカムエヴリバディ
-   tooltip: 1925（大正14）～現代
+   tooltip: 1925（大正14）～2025年
    start: 1925
    end: 2021
 
