『舞いあがれ！』の終了年を更新

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -530,9 +530,9 @@ titles:
       end: 2029
 
     - title: 舞いあがれ！
-      tooltip: 1994（平成6）年～現代
+      tooltip: 1994（平成6）年～2027年
       start: 1994
-      end: 2021
+      end: 2027
 
     - title: らんまん
       tooltip: 1862（文久2）年～1957（昭和32）年
