--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -540,9 +540,9 @@ titles:
       end: 1957
 
     - title: ブギウギ
-      tooltip: 1926（大正15）年～1950年代
+      tooltip: 1926（大正15）年～1957（昭和32）年
       start: 1926
-      end: 1959
+      end: 1957
 
     - title: 虎に翼
       tooltip: 1914（大正3）年～1984（昭和59）年
