『虎に翼』の開始年を更新

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -545,8 +545,8 @@ titles:
       end: 1957
 
     - title: 虎に翼
-      tooltip: 1914（大正3）年～1984（昭和59）年
-      start: 1914
+      tooltip: 1931（昭和6）年～1984（昭和59）年
+      start: 1931
       end: 1984
 
     - title: おむすび
