『虎に翼』の終了年を更新

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -545,9 +545,9 @@ titles:
       end: 1957
 
     - title: 虎に翼
-      tooltip: 1931（昭和6）年～1984（昭和59）年
+      tooltip: 1931（昭和6）年～1999（平成11）年
       start: 1931
-      end: 1984
+      end: 1999
 
     - title: おむすび
       tooltip: 1989（平成元）年～2024（令和6）年
