『おむすび』の開始年を更新

--- a/asadora-timeline.yml
+++ b/asadora-timeline.yml
@@ -550,7 +550,7 @@ titles:
       end: 1999
 
     - title: おむすび
-      tooltip: 1989（平成元）年～2024（令和6）年
+      tooltip: 2004（平成16）年～2024（令和6）年
       start: 1989
       end: 2024
 
